--- a/rise-connection-service/serverless/configs/functions/functions.yml
+++ b/rise-connection-service/serverless/configs/functions/functions.yml
@@ -28,6 +28,10 @@
             - Access-Control-Request-Headers
             - Access-Control-Request-Method
             - Access-Control-Allow-Origin
+        authorizer:
+          type: CUSTOM
+          authorizerId:
+            'Fn::ImportValue': mentorship-auth-ui-${opt:stage}-authorizer
     - http:
         path: connection/{type}/{email_id}
         method: put
@@ -48,6 +52,10 @@
             - Access-Control-Request-Headers
             - Access-Control-Request-Method
             - Access-Control-Allow-Origin
+        authorizer:
+          type: CUSTOM
+          authorizerId:
+            'Fn::ImportValue': mentorship-auth-ui-${opt:stage}-authorizer
     - http:
         path: connection/{type}/{email_id}
         method: delete
@@ -68,6 +76,10 @@
             - Access-Control-Request-Headers
             - Access-Control-Request-Method
             - Access-Control-Allow-Origin
+        authorizer:
+          type: CUSTOM
+          authorizerId:
+            'Fn::ImportValue': mentorship-auth-ui-${opt:stage}-authorizer
 
 # RISE:
 #   name: ${self:provider.stage}-rise-connection-service
