--- a/rise-email-utility/serverless/configs/functions/functions.yml
+++ b/rise-email-utility/serverless/configs/functions/functions.yml
@@ -9,9 +9,9 @@
         - src/handlers/${self:provider.name}/email-handler.js
         - node_modules/email-service/**
     events:
-    - http:
-        path: /email/test
-        method: get
+    # - http:
+    #     path: /email/test
+    #     method: get
     - sqs:
         arn: arn:aws:sqs:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${opt:stage}-${self:custom.queueName}
         batchSize: 10
