--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,6 +314,7 @@ workflows:
   version: 2
   build:
     jobs:         
+      - sts
       - s3-download:
           requires:
             - sts
@@ -338,16 +339,6 @@ workflows:
 
       - lambda-job:
           name: rise-connection-service
-          requires:
-            - s3-download
-          filters:
-            branches:
-              only:
-                - develop
-                - master
-                - feature/dit
-      - lambda-job:
-          name: rise-email-utility
           requires:
             - s3-download
           filters:
