--- a/rise-cloudsearch-sync-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-cloudsearch-sync-service/serverless/configs/providers/aws/dev/env.yml
@@ -1,1 +1,3 @@
 LOG_LEVEL: debug
+ENVIRONMENT: ${opt:stage, self:provider.stage}
+CLOUD_SEARCH_DOCUMENT_ENDPOINT: doc-userprofile-tktgdgxjn6xs7sbtsxjiic3the.eu-west-1.cloudsearch.amazonaws.com
