--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,27 +338,27 @@ workflows:
       #           - master
       #           - feature/dit
 
-      - lambda-job:
-          name: rise-connection-service
-          requires:
-            - s3-download
-          filters:
-            branches:
-              only:
-                - develop
-                - master
-                # - feature/dit
-                - /feature\/.*/
-      - lambda-job:
-          name: rise-email-utility
-          requires:
-            - s3-download
-          filters:
-            branches:
-              only:
-                - develop
-                - master
-                - feature/dit
+      # - lambda-job:
+      #     name: rise-connection-service
+      #     requires:
+      #       - s3-download
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - master
+      #           # - feature/dit
+      #           - /feature\/.*/
+      # - lambda-job:
+      #     name: rise-email-utility
+      #     requires:
+      #       - s3-download
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - master
+      #           - feature/dit
       - lambda-job:
           name: rise-cloudsearch-sync-service
           requires:
