--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,7 +302,7 @@ jobs:
             ls -la /home/circleci/project
             ls -la /home/circleci/project/common/serverless
             pwd
-            cd /home/circleci/project/rise-cloudsearch-sync-service
+            cd ${CIRCLE_STAGE}
             pwd
             make build test deploy
       - setup_remote_docker:
@@ -338,27 +338,27 @@ workflows:
       #           - master
       #           - feature/dit
 
-      # - lambda-job:
-      #     name: rise-connection-service
-      #     requires:
-      #       - s3-download
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - master
-      #           # - feature/dit
-      #           - /feature\/.*/
-      # - lambda-job:
-      #     name: rise-email-utility
-      #     requires:
-      #       - s3-download
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - master
-      #           - feature/dit
+      - lambda-job:
+          name: rise-connection-service
+          requires:
+            - s3-download
+          filters:
+            branches:
+              only:
+                - develop
+                - master
+                # - feature/dit
+                - /feature\/.*/
+      - lambda-job:
+          name: rise-email-utility
+          requires:
+            - s3-download
+          filters:
+            branches:
+              only:
+                - develop
+                - master
+                - feature/dit
       - lambda-job:
           name: rise-cloudsearch-sync-service
           requires:
