Removed unused Environment variables and added ssm parameters for sftp

--- a/rise-email-utility/serverless/configs/providers/aws/local/env.yml
+++ b/rise-email-utility/serverless/configs/providers/aws/local/env.yml
@@ -1,18 +1,3 @@
-BASE_PATH: https://dtjx92vkj0.execute-api.eu-west-1.amazonaws.com/dev/
-API_KEY_SSM_NAME: /middleware/dev/api-gateway/lambda-api-key
 LOG_LEVEL: debug
-HEADER_API_KEY_NAME: x-api-key
-ENCRYPTION_KEY_SSM_NAME: middleware-dev-api-security-request-encryption-key
-PRIVATE_KEY_SSM_NAME: middleware-dev-api-security-private-key
-TABLE_NAME: object-processed-metadata-dev
-TABLE_ID_NAME: id
-TABLE_RANGEID_NAME: rangeId
-EVENT_MESSAGE_ID: eventMessageId
-ITEM_EXPIRATION_TIME_IN_SECONDS: 10800
-ALLOWED_DUPLICATE_EVENT_PATTERNS: "transform-post"
-ALLOWED_BATCHING_EVENT_PATTERNS: "transform-post"
-STAGING_DB_NAME: staging-data-dev
-STAGING_DB_ID: id
-STAGING_DB_SORT_KEY: recNo
-QUEUE_URL: https://sqs.eu-west-1.amazonaws.com/820643439592/eif-cnr-queue
-CONDITIONAL_CHECK_EXCEPTION_CODE : ConditionalCheckFailedException
+SFTP_USER_NAME: /${opt:stage, self:provider.stage}/hackathon/mentorship/mentorship-sftp-username-${opt:stage, self:provider.stage}
+SFTP_PASSWORD: /${opt:stage, self:provider.stage}/hackathon/mentorship/mentorship-sftp-password-${opt:stage, self:provider.stage}
