--- a/rise-email-utility/serverless/configs/providers/aws/production/env.yml
+++ b/rise-email-utility/serverless/configs/providers/aws/production/env.yml
@@ -1,3 +1,5 @@
 LOG_LEVEL: debug
 SFTP_USER_NAME: /${opt:stage, self:provider.stage}/hackathon/mentorship/mentorship-sftp-username-${opt:stage, self:provider.stage}
 SFTP_PASSWORD: /${opt:stage, self:provider.stage}/hackathon/mentorship/mentorship-sftp-password-${opt:stage, self:provider.stage}
+SFTP_HOST: smtp.office365.com
+SFTP_PORT: 587
