--- a/rise-connection-service/serverless/configs/providers/aws/preprod/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/preprod/env.yml
@@ -21,4 +21,5 @@ ENVIRONMENT: ${opt:stage, self:provider.stage}
 VPC_SNS_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-sns-endpoint}
 CacheTTL: 100
 
-TABLE_NAME: rise-connection-preprod
+TABLE_NAME: rise-connections-${opt:stage, self:provider.stage}
+USER_PROFILE_TABLE_NAME: userprofile-${opt:stage, self:provider.stage}
