--- a/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
@@ -27,4 +27,5 @@ BUCKET_NAME: tvx-middleware-dev
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
 
-TABLE_NAME: rise-connections-dev
+TABLE_NAME: rise-connections-${opt:stage, self:provider.stage}
+USER_PROFILE_TABLE_NAME: userprofile-${opt:stage, self:provider.stage}
