--- a/rise-connection-service/serverless/configs/providers/aws/production/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/production/env.yml
@@ -24,4 +24,5 @@ BUCKET_NAME: tvx-middleware-production
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
 
-TABLE_NAME: rise-connection-production
+TABLE_NAME: rise-connections-${opt:stage, self:provider.stage}
+USER_PROFILE_TABLE_NAME: userprofile-${opt:stage, self:provider.stage}
