removed unused code

--- a/rise-reference-data-service/serverless/configs/functions/reference-data-function.yml
+++ b/rise-reference-data-service/serverless/configs/functions/reference-data-function.yml
@@ -9,7 +9,7 @@ process:
 
   events:
   - http:
-      path: /rise/referencedata
+      path: /referencedata
       method: get
       cors:
         origin: '*'
