Removed unused Env variables

--- a/rise-reference-data-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-reference-data-service/serverless/configs/providers/aws/dev/env.yml
@@ -1,9 +1,3 @@
-BASE_PATH: ${self:custom.fromTerraform.middleware_private_api_gateway_base_url}
-API_KEY_SSM_NAME: ${self:custom.fromTerraform.middleware_private_api_gateway_lambda_api_key_ssm_name}
 LOG_LEVEL: debug
-HEADER_API_KEY_NAME: x-api-key
-VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
 ENVIRONMENT: ${opt:stage, self:provider.stage}
-AUTHENTICATION_TOKEN_TABLE: ${self:custom.authenticationTokenTable}
-USER_PROFILE_TABLE: userprofile-${opt:stage, self:provider.stage}
-USER_ROLES_SSM_KEY: /${opt:stage, self:provider.stage}/hackathon/mentorship/mentorship-user-roles-${opt:stage, self:provider.stage}
+BUCKET_NAME: tvx-mentorship-${opt:stage, self:provider.stage}
