--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,3 +379,13 @@ workflows:
                 - develop
                 - master
                 - feature/dit
+      - lambda-job:
+          name: rise-stats-service
+          requires:
+            - s3-download
+          filters:
+            branches:
+              only:
+                - develop
+                - master
+                - feature/dit
