--- a/rise-statistics-service/serverless/configs/resources/stats-table.yml
+++ b/rise-statistics-service/serverless/configs/resources/stats-table.yml
@@ -1,5 +1,5 @@
   Resources:
-    riseConnectionDbTable:
+    riseStatsDbTable:
       Type: 'AWS::DynamoDB::Table'
       DeletionPolicy: Retain
       Properties:
